--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ ul {
   padding-bottom: 0px;
   background-color: #F37835;
   border-radius: 20px;
+  box-shadow: 3px 3px 8px #757575;
 }
 #first_section #video iframe {
   border-radius: 15px;
@@ -61,12 +62,14 @@ ul {
   background-color: #CC4D33;
   padding: 10px;
   border-radius: 20px;
+  box-shadow: 3px 3px 8px #757575;
 }
 #first_section #leadForm h3 {
   color: #ffffff;
 }
 #first_section #leadForm .btn {
   background-color: aliceblue;
+  font-size: 18px;
 }
 #first_section #leadForm label {
   color: #ffffff;
@@ -89,6 +92,7 @@ ul {
 }
 #second_section img {
   width: 100%;
+  filter: drop-shadow(3px 3px 5px #757575);
 }
 
 @media only screen and (min-width: 280px) and (max-width: 428px) {
@@ -140,7 +144,7 @@ ul {
 #profile_section .profile_div {
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 1px 1px 3px #818181;
+  box-shadow: 3px 3px 5px #757575;
   border-bottom: 4px dashed #CC4D33;
   border-top: 4px dashed #CC4D33;
 }
@@ -196,6 +200,7 @@ ul {
 #third_section .card {
   padding: 15px;
   border-radius: 20px;
+  box-shadow: 3px 3px 8px #757575;
 }
 #third_section .card img {
   height: 90px;
@@ -219,6 +224,7 @@ ul {
   padding: 15px;
   border-radius: 20px;
   height: 215px;
+  box-shadow: 3px 3px 8px #757575;
 }
 #forth_section .card img {
   height: 90px;
@@ -252,6 +258,7 @@ ul {
   padding: 15px;
   border-radius: 20px;
   height: 300px;
+  box-shadow: 3px 3px 8px #757575;
 }
 #fifth_section .card img {
   height: 90px;
@@ -281,6 +288,17 @@ ul {
     height: 370px;
   }
 }
+#review_section .trust_logo {
+  height: auto;
+  width: 200px;
+  box-shadow: none;
+}
+#review_section img {
+  width: 100%;
+  box-shadow: 3px 3px 8px #757575;
+  border-radius: 10px;
+}
+
 #footer_top {
   background-color: aliceblue;
   text-align: center;
