--- a/style.css
+++ b/style.css
@@ -194,6 +194,19 @@ ul {
     margin-top: 30px;
   }
 }
+@media only screen and (min-width: 1100px) and (max-width: 1280px) {
+  #profile_section .company_contact {
+    padding-left: 0;
+    list-style: none;
+  }
+  #profile_section .company_contact li {
+    padding: 5px 0;
+    font-size: 20px;
+  }
+  #profile_section .company_contact li i {
+    color: #CC4D33;
+  }
+}
 #third_section h2 {
   font-size: 45px;
 }
