--- a/style.scss
+++ b/style.scss
@@ -214,6 +214,22 @@ ul{
     }
 }
 
+@media only screen and (min-width: 1100px) and (max-width: 1280px) {
+    #profile_section{
+        .company_contact{
+            padding-left: 0;
+            list-style: none;
+            li{
+                padding: 5px 0;
+                font-size: 20px;
+                i{
+                    color: #CC4D33;
+                }
+            }
+        }
+    }
+}
+
 #third_section {
     h2{
         font-size: 45px;
