--- a/style.scss
+++ b/style.scss
@@ -12,17 +12,31 @@ ul{
     padding-left: 0;
 }
 
+#top_bar{
+    background-color: #CC4D33;
+    padding-bottom: 0;
+    marquee{
+        h4{
+            padding-top: 10px;
+            font-weight: 600;
+            color: #ffffff;
+            margin-bottom: 0;
+        } 
+    }
+}
+
 #navbar{
     padding: 5px 50px;
-    background-color: antiquewhite;
-    position: fixed;
-    top: 0;
+    // background-color: antiquewhite;
+    // position: fixed;
+    // top: 0;
     width: 100%;
-    z-index: 1000;
-    border-bottom: 2px solid #CC4D33;
-    border-top: 2px solid #CC4D33;
+    // z-index: 1000;
+    // border-bottom: 2px solid #CC4D33;
+    // border-top: 2px solid #CC4D33;
     img{
-        height: 80px;
+        height: 130px;
+        padding-top: 20px;
     }
 }
 @media only screen and (min-width: 280px) and (max-width: 428px) {
@@ -52,7 +66,6 @@ ul{
 }
 
 #first_section{
-    margin-top: 100px;
     h1{
         font-size: 45px;
     }
@@ -71,6 +84,8 @@ ul{
         padding: 10px;
         border-radius: 20px;
         box-shadow: 3px 3px 8px #757575;
+        margin-left: 100px;
+        margin-right: 100px;
         h3{
             color: #ffffff;
         }
@@ -91,6 +106,18 @@ ul{
         }
         h1{
             font-size: 35px;
+        }
+        #leadForm{
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+}
+@media only screen and (min-width: 768px) and (max-width: 970px) {
+    #first_section{
+        #leadForm{
+            margin-left: 0px;
+            margin-right: 0px;
         }
     }
 }
@@ -226,7 +253,23 @@ ul{
     }
 }
 
-@media only screen and (min-width: 1100px) and (max-width: 1280px) {
+@media only screen and (min-width: 970px) and (max-width: 1024px) {
+    #profile_section{
+        .company_contact{
+            padding-left: 0;
+            list-style: none;
+            li{
+                padding: 5px 0;
+                font-size: 20px;
+                i{
+                    color: #CC4D33;
+                }
+            }
+        } 
+    }
+}
+
+@media only screen and (min-width: 1100px) and (max-width: 1440px) {
     #profile_section{
         .company_contact{
             padding-left: 0;
@@ -256,9 +299,14 @@ ul{
             margin: auto;
         }
         .card-body{
-            h3{
+            h4{
                 font-weight: 600;
-                font-size: 30px;
+                font-size: 25px;
+            }
+            .btn{
+                background-color: #F37835;
+                color: #ffffff;
+                margin-top: 15px;
             }
         }
     }
@@ -383,7 +431,7 @@ ul{
     }
 }
 
-@media only screen and (min-width: 1280px) and (max-width: 1440px) {
+@media only screen and (min-width: 1024px) and (max-width: 1440px) {
     #review_section{
         .review-col{
             width: 50%;
